--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ main {
 }
 .headerIndex .headerMenu{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
@@ -30,17 +31,17 @@ main {
     text-decoration: none;
 }
 
-.headerMenu .navBar {
+.headerMenu .navBar ul{
     display: flex;
     
 }
 
-.headerMenu .navBar li {
+.headerMenu .navBar ul li {
     list-style: none;
     margin: 1.3rem;
 }
 
-.headerMenu .navBar a {
+.headerMenu .navBar ul a {
     text-decoration: none;
     color: #DFDADA;
     font-size: 1.4rem;
@@ -247,10 +248,10 @@ main */
     .headerIndex{
         padding: .5rem;
     }
-    .headerMenu .navBar li a{
+    .headerMenu .navBar ul li a{
         font-size: .8rem;
     }
-    .headerMenu .navBar li {
+    .headerMenu .navBar ul li {
         list-style: none;
         margin: .7rem;
     }
@@ -336,10 +337,24 @@ main */
 }
 
 @media(max-width:425px){
-    .headerIndex .logo{
-        margin: auto;
+    .headerMenu .navBar{
+        width: 100%;
+        height: 0;
+        overflow: hidden;
     }
-    
+    .headerMenu .navBar ul{
+        flex-direction: column;
+        align-items: center;
+        padding: 0.5rem 0px;
+    }
+    .headerMenu label{
+        display: flex;
+        color: white;
+        cursor: pointer;
+    }
+    .headerMenu #toggle:checked ~ .navBar{
+        height: 100%;
+    }
 
 }
 
