--- a/css/style.css
+++ b/css/style.css
@@ -109,86 +109,88 @@ main */
     
 }
 
-.firstImg {
-    width: 25%;
+.indexCarouselItem{
     height: 100%;
-    overflow: hidden;
-    padding-top: 2.5rem;
 }
-.firstImg h2{
+
+#carouselItem-1 {
     background-image: url(../assets/img/plano-medio-mujer-velo-negro.jpg);
     background-size: cover;
     background-position: center;
-    width: 100%;
-    height: 95%;
+    width: 25%;
+    height: 90%;
+    padding-top: 2.5rem;
+}
+.cardCarouselItem .carouselItem_1-h2{
     text-align: center;
-    padding-top: 2rem;
     font-size: 2.1rem;    
 }
-.firstImg:hover {
+#carouselItem-1:hover {
     transform: scale(1.20);
     transition: 0.7s;
     
 }
-.firstImg a{
+#carouselItem-1 a{
     text-decoration: none;
     color: #d4d2d2;
 }
-.secondImg {
+
+
+
+#carouselItem-2 {
+    background-image: url(../assets/img/horror.jpg);
+    background-size: cover;
+    background-position: center;
     width: 37%;
     height: 100%;
     overflow: hidden;
     box-shadow: 1px 1px .625rem black;
 }
-.secondImg h2 {
-    background-image: url(../assets/img/horror.jpg);
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    height: 100%;
+.cardCarouselItem .carouselItem_2-h2 {
     text-align: center;
     padding-top: 2rem;
     font-size: 2.1rem;
 }
-
-.secondImg:hover {
+#carouselItem-2:hover {
     transform: scale(1.14);
     transition: 0.7s;
     
 }
-
-
-.secondImg a{
+#carouselItem-2 a{
     text-decoration: none;
     color: #d4d2d2;
 }
 
-.thirdImg {
-    width: 25%;
-    height: 100%;
-    overflow: hidden;
-    padding-top: 2.5rem;
-}
-.thirdImg h2 {
+
+
+#carouselItem-3 {
     background-image: url(../assets/img/callejon-abandonado-hospital-psiquiatrico.jpg);
     background-size: cover;
     background-position: center;
-    width: 100%;
-    height: 95%;
+    width: 25%;
+    height: 90%;
+    overflow: hidden;
+    padding-top: 2.5rem;
+}
+.cardCarouselItem .carouselItem_3-h2 {
     text-align: center;
-    padding-top: 2rem;
     font-size: 2.1rem;
 }
 
-.thirdImg:hover {
+#carouselItem-3:hover {
     transform: scale(1.20);
     transition: 0.7s;
     
 }
-.thirdImg a{
+#carouselItem-3 a{
     text-decoration: none;
     color: #d4d2d2;
 }
+
+.arrowsCarouselItem{
+    display: none;
+}
+
 
 /* Index 
  rooms */
@@ -233,8 +235,7 @@ main */
 
 .divText {
     width: 50rem;
-    height: 18rem;
-    padding: 0rem 3.125rem;
+    padding: 0rem 1.5rem;
 }
 
 .divText a {
@@ -302,15 +303,21 @@ main */
     .indexMain{
         height: 25rem;
     }
-    .firstImg h2{
+    
+    .cardCarouselItem .carouselItem_1-h2{
         font-size: 1.3rem;
     }
-    .secondImg h2{
+    .cardCarouselItem .carouselItem_2-h2{
         font-size: 1.3rem;
     }
-    .thirdImg h2{
+    .cardCarouselItem .carouselItem_3-h2{
         font-size: 1.3rem;
     }
+
+
+
+
+
     .indexRooms{
         font-size: .6rem;
         margin: 0rem;
@@ -327,6 +334,9 @@ main */
         width: 10rem;
         height: 10rem;
     }
+    .indexRooms .roomSection .divtext{
+        padding: .625rem;
+    }
 
     .roomSection {
         width: 90%;
@@ -335,6 +345,9 @@ main */
     }
     
 }
+
+
+
 
 @media(max-width:425px){
     .headerMenu .navBar{
@@ -365,36 +378,63 @@ main */
 
     .indexMain{
         height: 17rem;
+        display: block;
+        overflow: hidden;
     }
-    .firstImg h2{
-        font-size: .9rem;
+    .indexCarouselItem{
+        position: relative;
+        margin-left: 10%;
     }
-    .secondImg h2{
-        font-size: .9rem;
+    #carouselItem-1{
+        width: 80%;
+        height: 100%;
     }
-    .thirdImg h2{
-        font-size: .9rem;
+    #carouselItem-3{
+        width: 80%;
+        height: 100%;
     }
+    #carouselItem-2{
+        width: 80%;
+        height: 100%;
+    }
+    .arrowsCarouselItem{
+        height: 80%;
+        width: 100%; 
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 1.25rem; 
+    }
+    #carouselItem-2:hover{
+        display: none;
+    }
+    #carouselItem-1:hover{
+        display: none;
+    }
+    #carouselItem-3:hover{
+        display: none;
+    }
+
     .indexRooms{
         font-size: .4rem;
         margin: 0rem;
     }
     .divFirstRoom img {
-        width: 10rem;
-        height: 10rem;
+        width: 7rem;
+        height: 7rem;
     }
     .divSecondRoom img {
-        width: 10rem;
-        height: 10rem;
+        width: 7rem;
+        height: 7rem;
     }
     .divThirdRoom img {
-        width: 10rem;
-        height: 10rem;
+        width: 7rem;
+        height: 7rem;
     }
 
     .roomSection {
         width: 90%;
-        height: 10rem;
+        height: 7rem;
         margin: 1rem;
     }
 
@@ -569,7 +609,7 @@ main*/
     flex-grow: 1;
 }
 
-form {
+.contactFormInput {
     min-width: 340px;
     flex: 1;
     text-align: center;
@@ -577,7 +617,7 @@ form {
     order: 5;
 }
 
-.formInput {
+.contactFormInput .formInput {
     width: 100%;
     padding: .4375rem;
     margin: .375rem 0;
@@ -587,13 +627,13 @@ form {
     color: #fff;
 }
 
-form .formInput:focus{
+.contactFormInput .formInput:focus{
     background: linear-gradient(to bottom, transparent, #222);
     outline: none;
     border-bottom: 3px solid #5bf;
 }
 
-form textarea {
+.contactFormInput textarea {
     min-height: 9rem;
     resize: none;
 }
@@ -613,19 +653,19 @@ form textarea {
     max-width: 12.5rem;
 }
 
-form input[type="submit"] {
+.contactFormInput input[type="submit"] {
     background: #5bf;
     border-bottom: none;
     padding: 12px;
 }
 
-form input[type="submit"]:hover {
+.contactFormInput input[type="submit"]:hover {
     background: #57f;
     border-bottom: none;
     padding: 12px;
 }
 
-form input[type="submit"]:active {
+.contactFormInput input[type="submit"]:active {
     background: linear-gradient(to bottom, #5bf, #57f);
     box-shadow: #111;
 }
