--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,7 @@ main */
         overflow: hidden;
     }
     .indexCarouselItem{
+        scroll-margin-top: 6rem;
         position: relative;
         margin-left: 10%;
     }
@@ -406,13 +407,16 @@ main */
         padding: 1.25rem; 
     }
     #carouselItem-2:hover{
-        display: none;
+        transform: none;
+        transition: none;
     }
     #carouselItem-1:hover{
-        display: none;
+        transform: none;
+        transition: none;
     }
     #carouselItem-3:hover{
-        display: none;
+        transform: none;
+        transition: none;
     }
 
     .indexRooms{
@@ -503,43 +507,61 @@ main*/
     text-align: center;
 }
 
+
 .bookingsTitle h1 {
     color: #b87f50;
     font-size: 4.5rem;
 }
 
 .bookingsTitle p {
-    padding-top: 3rem;
-    font-size: 2rem;
-    width: 40%;
+    padding-top: 2rem;
+    font-size: 1.6rem;
     color: #BCB9B9;
+    display: inline-block;
 }
 
 .bookingsForm {
-    margin: 3rem;
-    font-size: 2rem;
-    text-align: left;
+    width: 20%;
+    text-align: center;
 }
-
 .bookingsForm form {
-    width: 8%;
     margin: 1rem 2rem;
-    font-size: 1.2rem;
+}
+.bookingsForm form label{
+    color: #BCB9B9;
+    font-size: 1.9rem;
+}
+.bookingsForm form input{
+    height: 1.6rem;
+    font-size: 1.1rem;
+    margin: .625rem;
+    padding: .3125rem;
+}
+.bookingsForm i{
+    color: #BCB9B9;
+    font-size: 1.6rem;
 }
 
-.bookingSchedule {
-    align-items: center;
-}
+
 
 .bookingRooms a img {
-    width: 20%;
-    height: 29rem;
+    width: 18%;
+    height: 25rem;
     object-fit: cover;
 }
-
-
-.bookingAvailable a {
+.bookingTimetable{
+    width: 15%;
+    background-color: #504f4f91;
+    font-size: 1.3rem;
+    border-radius: 3%;
+    padding: 1rem;
+}
+.bookingTimetable li{
+    list-style: none;
+}
+.bookingTimetable a {
     text-decoration: none;
+    color: #b87f50;
 }
 
 /* F.A.Q. */
