--- a/css/style.css
+++ b/css/style.css
@@ -506,15 +506,15 @@ main*/
     width: 100%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 6rem 5rem 20rem 35rem 20rem;
+    grid-template-rows: 6rem 5rem 20rem 45rem;
     grid-template-areas: 
     "item1 item1 item1 item1 item1"
     "item2 item2 item2 item2 item2"
     "item3 item4 item5 item6 item6"
-    "item7 item8 item8 item8 item10"
-    "item9 item9 item9 item9 item9"
+    "item7 item8 item8 item8 item9"
     ;
     gap: .625rem;
+    text-align: center;
 }
 .mainBookings h1{
     grid-area: item1;
@@ -531,7 +531,7 @@ main*/
 }
 .bookingsForm{
     grid-area: item3;
-    color: #BCB9B9;
+    color: #747272;
     font-size: 1.3rem;
     text-align: center;
 }
@@ -555,9 +555,18 @@ main*/
 }
 .mainBookings a img{
     width: 100%;
-    height: 100%;
+    height: 94%;
+    object-fit: cover;
 }
-
+.mainBookings a{
+    text-decoration: none;
+    color: #b87f50;
+}
+#sedeSeleccionada{
+    grid-area: item7;
+    color: #BCB9B9;
+    font-size: 1.6rem;
+}
 .bookingRooms{
     grid-area: item8;
     width: 100%;
@@ -566,15 +575,49 @@ main*/
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    
+    gap: .625rem;
+    background-color: #161616;
 }
-.bookingRooms a{
-    margin: auto;
+.card{
     width: 90%;
     height: 90%;
+    border-radius: .625rem;
+    overflow: hidden;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.197);    
+    margin: auto;
+    background-color: #474747;
+}
+.card div{
+    width: 100%;
+    height: 80%;
+    
+}
+.card div img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;    
+    filter: grayscale(1);
+}
+.card h2{
+    color: #b87f50;
+}
+/* .card button{
+    all: initial;
+} */
+.card div img:hover{
+    filter: grayscale(0);
+}
+.card:hover{
+    transform: scale(110%);
+    transition: all 0.5s ease-out;
 }
 .bookingSchedule{
     grid-area: item9;
+    margin: 0 auto;
+    background-color: #474747;
+}
+.bookingSchedule ul li {
+    list-style: none;
 }
 
 
