responsive completo en todos los html + seo + animaciones + sass completo

--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -10,7 +10,7 @@ main{
     background-color: $main-color;
 }
 h3{
-    color: $text-color
+    color: $text-color;
 }
 h2{
     color: $title-color;
