--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,8 @@ footer {
     width: 37%;
     height: 100%;
     overflow: hidden;
-    box-shadow: 1px 1px .625rem black; }
+    box-shadow: 1px 1px .625rem black;
+    padding-top: 2.5rem; }
     .mainIndex .indexMain #carouselItem-2:hover {
       transform: scale(1.2);
       transition: 0.7s; }
@@ -145,6 +146,8 @@ footer {
   align-items: left;
   gap: none;
   color: #d4d2d2; }
+  .mainIndex .indexRooms :nth-child(2) {
+    flex-direction: row-reverse; }
   .mainIndex .indexRooms article {
     display: flex;
     flex-direction: row;
@@ -157,7 +160,13 @@ footer {
       object-fit: cover;
       width: 18rem;
       height: 18rem;
-      box-shadow: .125rem .125rem .625rem black; }
+      box-shadow: .125rem .125rem .625rem black;
+      border-radius: 50%;
+      border: 4px solid black; }
+      .mainIndex .indexRooms article a img:hover {
+        border-radius: 10%;
+        transition: all 1s;
+        transform: rotate(360deg); }
     .mainIndex .indexRooms article div {
       width: 50rem;
       padding: 0rem 1.5rem; }
@@ -170,17 +179,29 @@ footer {
   flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
-  gap: none; }
+  gap: none;
+  background-image: linear-gradient(to right bottom, #131625, #181323, #1d0f1f, #210a1a, #240613, #330917, #430a18, #530c16, #79101e, #a11523, #c91c27, #f22727); }
+  .contactMain .border {
+    width: 20%;
+    height: .25rem;
+    background-color: #201635; }
   .contactMain h1, .contactMain .mainIndex .edge, .mainIndex .contactMain .edge {
-    background-color: #111010;
+    background-color: transparent;
     color: #b87f50;
     padding: 1.25rem; }
+  .contactMain h4 {
+    padding: 1.25rem;
+    color: #d4d2d2;
+    font-size: 2rem; }
   .contactMain .contactNumber {
-    color: #b87f50;
-    margin: 1rem;
+    margin: 3rem;
     font-size: 1.4rem; }
+    .contactMain .contactNumber h3 {
+      color: #b87f50;
+      padding: .5rem; }
     .contactMain .contactNumber a {
-      color: #d4d2d2; }
+      color: #d4d2d2;
+      padding-left: 3rem; }
   .contactMain .contactForm {
     display: flex;
     flex-direction: row;
@@ -189,49 +210,50 @@ footer {
     align-items: center;
     gap: none;
     flex-grow: 1;
-    background: #333;
-    padding: 20px;
-    border: 20px solid black;
-    outline: 4px dashed #b87f50;
-    max-width: 50%;
+    background: #33333398;
+    padding: 1.25rem;
+    border: .5rem solid black;
+    outline: 0.15rem dashed #b87f50;
+    width: 45%;
     margin: 3.125rem auto; }
     .contactMain .contactForm .contactFormInput {
-      min-width: 340px;
+      width: 21.25rem;
+      min-width: 15rem;
       flex: 1;
       text-align: center;
-      padding: 30px;
+      padding: 1.875rem;
       order: 5; }
       .contactMain .contactForm .contactFormInput input, .contactMain .contactForm .contactFormInput textarea {
         width: 100%;
         padding: .4375rem;
         margin: .375rem 0;
         border: none;
-        border-bottom: 3px solid #b87f50;
+        border-bottom: 0.1875rem solid #b87f50;
         background: transparent;
         color: #DFDADA; }
         .contactMain .contactForm .contactFormInput input[type="submit"], .contactMain .contactForm .contactFormInput textarea[type="submit"] {
           background: #5bf;
           border-bottom: none;
-          padding: 12px; }
+          padding: .75rem; }
           .contactMain .contactForm .contactFormInput input[type="submit"]:hover, .contactMain .contactForm .contactFormInput textarea[type="submit"]:hover {
             background: #57f;
             border-bottom: none;
-            padding: 12px; }
+            padding: .75rem; }
           .contactMain .contactForm .contactFormInput input[type="submit"]:active, .contactMain .contactForm .contactFormInput textarea[type="submit"]:active {
             background: linear-gradient(to bottom, #5bf, #57f);
             box-shadow: black; }
         .contactMain .contactForm .contactFormInput input:focus, .contactMain .contactForm .contactFormInput textarea:focus {
           background: linear-gradient(to bottom, transparent, #551010);
           outline: none;
-          border-bottom: 3px solid #5bf; }
+          border-bottom: .1875rem solid #5bf; }
       .contactMain .contactForm .contactFormInput textarea {
-        min-height: 9rem;
+        height: 7rem;
         resize: none; }
     .contactMain .contactForm div {
       flex: 1;
       display: flex;
       padding: .625rem;
-      min-width: 18.75rem;
+      min-width: 13.75rem;
       max-width: 25rem;
       order: 2; }
       .contactMain .contactForm div img {
@@ -284,7 +306,33 @@ footer {
     gap: 0.4rem; }
     .mainBookings .bookingSedes a {
       width: 33%;
-      color: #b87f50; }
+      color: #b87f50;
+      -webkit-animation: scale-up-hor-left 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+      animation: scale-up-hor-left 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both; }
+
+@-webkit-keyframes scale-up-hor-left {
+  0% {
+    -webkit-transform: scaleX(0.4);
+    transform: scaleX(0.4);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%; }
+  100% {
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%; } }
+
+@keyframes scale-up-hor-left {
+  0% {
+    -webkit-transform: scaleX(0.4);
+    transform: scaleX(0.4);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%; }
+  100% {
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+    -webkit-transform-origin: 0% 0%;
+    transform-origin: 0% 0%; } }
       .mainBookings .bookingSedes a img {
         width: 100%;
         height: 94%;
@@ -345,23 +393,45 @@ footer {
 
 .faqMainSection {
   background-image: url(../assets/img/scape-room.jpg);
-  background-size: 50% 100%;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
-  background-position: right; }
+  padding-bottom: 2rem; }
   .faqMainSection h1, .faqMainSection .mainIndex .edge, .mainIndex .faqMainSection .edge {
     color: #b87f50;
     text-align: center;
     padding: 1.25rem;
     font-size: 2rem; }
-  .faqMainSection div {
-    width: 49%;
-    margin-left: 1.3rem; }
-    .faqMainSection div h2 {
+  .faqMainSection .faqImgs {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    margin: .5rem; }
+    .faqMainSection .faqImgs div {
+      text-align: center; }
+      .faqMainSection .faqImgs div img {
+        width: 8rem;
+        height: 8rem; }
+      .faqMainSection .faqImgs div h3 {
+        width: 11rem;
+        height: 11rem;
+        font-size: .9rem; }
+  .faqMainSection .questions {
+    background-color: #212122f5;
+    width: 45%;
+    margin-left: 2.9rem;
+    border-radius: 1.3%; }
+    .faqMainSection .questions h2 {
+      color: #b87f50;
+      font-size: 1.4rem;
+      border-bottom: 0.15rem solid #181616;
+      padding: .5rem; }
+    .faqMainSection .questions p {
       color: #d4d2d2;
-      font-size: 1.8rem; }
-    .faqMainSection div p {
-      color: #d4d2d2;
-      font-size: 1.1rem; }
+      font-size: 1.1rem;
+      padding: .5rem; }
 
 .mainFuturix {
   display: flex;
@@ -373,11 +443,13 @@ footer {
   background-color: #D6D6D6;
   height: 37.5rem; }
   .mainFuturix .futurixTitle {
-    padding: 8rem;
+    width: 27%;
+    margin: auto;
     font-size: 1.4rem; }
     .mainFuturix .futurixTitle h1, .mainFuturix .futurixTitle .mainIndex .edge, .mainIndex .mainFuturix .futurixTitle .edge {
       padding-bottom: 3rem; }
   .mainFuturix .futurixMainImg {
+    width: 73%;
     height: 37.5rem; }
     .mainFuturix .futurixMainImg img {
       display: inline-block;
@@ -401,6 +473,28 @@ footer {
     width: 39.375rem;
     background-color: rgba(0, 0, 0, 0.2);
     margin-left: 20px; }
+
+.mainBootstrap {
+  background-color: #cac9c9; }
+  .mainBootstrap section #carousel .carousel-inner {
+    max-height: 42rem;
+    object-fit: contain; }
+    .mainBootstrap section #carousel .carousel-inner img {
+      width: 100%; }
+  .mainBootstrap .equipo div #img-equipo {
+    width: 70%;
+    height: 20rem;
+    object-fit: contain; }
+  .mainBootstrap .equipo #local {
+    display: flex;
+    justify-content: space-between; }
+    .mainBootstrap .equipo #local .mapa {
+      background-image: url(../assets/img/mapa2.png);
+      width: 100%;
+      height: 35rem; }
+    .mainBootstrap .equipo #local div .wrapper-local {
+      width: 50%;
+      padding: 6.25rem; }
 
 @media (max-width: 768px) {
   header {
@@ -486,6 +580,77 @@ footer {
       .mainBookings .bookingSchedule h2 {
         font-size: .8rem; }
       .mainBookings .bookingSchedule ul li a {
+        font-size: .8rem; }
+  .faqMainSection {
+    background-image: linear-gradient(to right bottom, #131625, #181323, #1d0f1f, #210a1a, #240613, #330917, #430a18, #530c16, #79101e, #a11523, #c91c27, #f22727); }
+    .faqMainSection h1, .faqMainSection .mainIndex .edge, .mainIndex .faqMainSection .edge {
+      font-size: 1.4rem; }
+    .faqMainSection .faqImgs {
+      flex-wrap: wrap;
+      gap: .5rem; }
+      .faqMainSection .faqImgs div img {
+        width: 5.6rem;
+        height: 5.6rem; }
+      .faqMainSection .faqImgs div h3 {
+        width: 8rem;
+        height: 8rem;
+        font-size: .6rem; }
+    .faqMainSection .questions {
+      width: 80%;
+      margin: auto; }
+      .faqMainSection .questions h2 {
+        font-size: 1.1rem; }
+      .faqMainSection .questions p {
+        font-size: .8rem; }
+  .contactMain h1, .contactMain .mainIndex .edge, .mainIndex .contactMain .edge {
+    font-size: 1.5rem; }
+  .contactMain h4 {
+    font-size: 1.2rem; }
+  .contactMain .contactNumber h3 {
+    font-size: 1.1rem; }
+  .contactMain .contactForm {
+    width: 60%;
+    border: .5rem solid black; }
+    .contactMain .contactForm .contactFormInput input {
+      padding: .350rem;
+      margin: .300rem 0; }
+    .contactMain .contactForm .contactFormInput textarea {
+      height: 4rem; }
+    .contactMain .contactForm div img {
+      width: 7rem; }
+  .mainFuturix {
+    height: 20rem; }
+    .mainFuturix .futurixTitle {
+      width: 27%;
+      margin: auto;
+      font-size: 1rem; }
+      .mainFuturix .futurixTitle h1, .mainFuturix .futurixTitle .mainIndex .edge, .mainIndex .mainFuturix .futurixTitle .edge {
+        padding-bottom: 3rem; }
+    .mainFuturix .futurixMainImg {
+      width: 73%;
+      height: 20rem; }
+      .mainFuturix .futurixMainImg img {
+        display: inline-block;
+        width: 50%;
+        object-fit: cover;
+        height: 100%; }
+        .mainFuturix .futurixMainImg img:first-child {
+          float: left; }
+        .mainFuturix .futurixMainImg img .futurixImg2 {
+          float: right; }
+  .futurixArticle {
+    width: 100%;
+    height: 100%;
+    background-image: url(../assets/img/interior-casa.jpg);
+    background-size: cover;
+    margin: auto;
+    display: flex; }
+    .futurixArticle article {
+      width: 39.375rem;
+      margin-left: 1.25rem; }
+      .futurixArticle article div h2 {
+        font-size: 1.3rem; }
+      .futurixArticle article div p {
         font-size: .8rem; } }
 
 @media (max-width: 425px) {
@@ -626,7 +791,59 @@ footer {
       .mainBookings .bookingRooms :nth-child(6) {
         display: none; }
       .mainBookings .bookingRooms article h2 {
-        font-size: .6rem; } }
+        font-size: .6rem; }
+  .faqMainSection h1, .faqMainSection .mainIndex .edge, .mainIndex .faqMainSection .edge {
+    font-size: 1.1rem; }
+  .faqMainSection .faqImgs {
+    gap: 0rem; }
+    .faqMainSection .faqImgs div img {
+      width: 4.5rem;
+      height: 4.5rem; }
+    .faqMainSection .faqImgs div h3 {
+      width: 7rem;
+      height: 7rem;
+      font-size: .45rem; }
+  .faqMainSection .questions h2 {
+    font-size: .9rem; }
+  .faqMainSection .questions p {
+    font-size: .6rem; }
+  .contactMain h1, .contactMain .mainIndex .edge, .mainIndex .contactMain .edge {
+    font-size: 1.2rem; }
+  .contactMain h4 {
+    font-size: .8rem; }
+  .contactMain .contactNumber h3 {
+    font-size: .9rem; }
+  .contactMain .contactForm {
+    background: transparent;
+    width: 60%;
+    border: none;
+    outline: none; }
+    .contactMain .contactForm .contactFormInput input {
+      padding: .350rem;
+      margin: .300rem 0; }
+    .contactMain .contactForm .contactFormInput textarea {
+      height: 4rem; }
+    .contactMain .contactForm div img {
+      width: 7rem; }
+  .mainFuturix {
+    height: 20rem; }
+    .mainFuturix .futurixTitle {
+      margin: 0%;
+      width: 27%;
+      font-size: 1rem; }
+      .mainFuturix .futurixTitle h1, .mainFuturix .futurixTitle .mainIndex .edge, .mainIndex .mainFuturix .futurixTitle .edge {
+        padding-bottom: 3rem; }
+    .mainFuturix .futurixMainImg {
+      display: none; }
+  .futurixArticle {
+    padding: 1.5rem; }
+    .futurixArticle article {
+      width: 39.375rem;
+      margin-left: 1.25rem; }
+      .futurixArticle article div h2 {
+        font-size: 1.1rem; }
+      .futurixArticle article div p {
+        font-size: .8rem; } }
 
 @media (max-width: 320px) {
   .mainIndex h1, .mainIndex .edge {
@@ -653,34 +870,58 @@ footer {
     grid-template-areas: "item1 item1 item1 item1" "item2 item2 item2 item2" "item4 item4 item4 item4" "item8 item8 item8 item8" "item11 item11 item11 item11" "item13 item13 item13 item13";
     gap: 0rem;
     width: 100%; }
+    .mainBookings h1, .mainBookings .mainIndex .edge, .mainIndex .mainBookings .edge {
+      font-size: 1rem; }
     .mainBookings .bookingSedes {
       height: 7rem; }
+      .mainBookings .bookingSedes a {
+        font-size: .6rem; }
     .mainBookings .bookingsForm {
       grid-area: item11; }
+      .mainBookings .bookingsForm form input[type=date] {
+        width: 80%; }
     .mainBookings .bookingSchedule {
       grid-area: item13;
       margin-top: 0rem;
       width: 100%;
-      height: 100%; } }
-
-.mainBootstrap {
-  background-color: #cac9c9; }
-  .mainBootstrap section #carousel .carousel-inner {
-    max-height: 42rem;
-    object-fit: contain; }
-    .mainBootstrap section #carousel .carousel-inner img {
-      width: 100%; }
-  .mainBootstrap .equipo div #img-equipo {
-    width: 70%;
-    height: 20rem;
-    object-fit: contain; }
-  .mainBootstrap .equipo #local {
-    display: flex;
-    justify-content: space-between; }
-    .mainBootstrap .equipo #local .mapa {
-      background-image: url(../assets/img/mapa2.png);
-      width: 100%;
-      height: 35rem; }
-    .mainBootstrap .equipo #local div .wrapper-local {
-      width: 50%;
-      padding: 6.25rem; }
+      height: 100%; }
+  .contactMain h1, .contactMain .mainIndex .edge, .mainIndex .contactMain .edge {
+    font-size: 1rem; }
+  .contactMain h4 {
+    font-size: .6rem; }
+  .contactMain .contactNumber {
+    margin: 0; }
+    .contactMain .contactNumber h3 {
+      font-size: .6rem; }
+    .contactMain .contactNumber a {
+      padding-left: .8rem; }
+  .contactMain .contactForm {
+    background: transparent;
+    width: 80%;
+    min-width: none;
+    border: none;
+    outline: none;
+    margin: 0;
+    padding: 0; }
+    .contactMain .contactForm .contactFormInput {
+      min-width: 0rem;
+      margin-top: 5rem;
+      margin-bottom: 2rem;
+      padding: 0; }
+      .contactMain .contactForm .contactFormInput input {
+        width: 100%;
+        min-width: none; }
+      .contactMain .contactForm .contactFormInput textarea {
+        height: 4rem; }
+    .contactMain .contactForm div {
+      display: none; }
+  .futurixArticle {
+    margin: 0rem;
+    padding: .5rem; }
+    .futurixArticle article {
+      margin-left: 0rem;
+      padding: 0; }
+      .futurixArticle article div h2 {
+        font-size: .8rem; }
+      .futurixArticle article div p {
+        font-size: .6rem; } }
