--- a/scss/layout/_main-faq.scss
+++ b/scss/layout/_main-faq.scss
@@ -1,24 +1,45 @@
 .faqMainSection{
     background-image: url(../assets/img/scape-room.jpg);
-    background-size: 50% 100%;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
-    background-position: right;
+    padding-bottom: 2rem;
     h1{
         color: $title-color;
         text-align: center;
         padding: 1.25rem;
         font-size: map-get($size, title );
     }
-    div{
-        width: 49%;
-        margin-left: 1.3rem;
+    .faqImgs{
+        @include flex(row,nowrap,center,center,3rem);
+        margin: .5rem;
+        div{
+            text-align: center;
+            img{            
+            width: 8rem;
+            height: 8rem;
+            }
+            h3{
+                width: 11rem;
+                height: 11rem;
+                font-size: .9rem;
+            }
+        }
+    }
+    .questions{
+        background-color: #212122f5;
+        width: 45%;
+        margin-left: 2.9rem;
+        border-radius: 1.3%;
         h2{
-            color: $text-color;
-            font-size: map-get($size, subtitle );
+            color: $title-color;
+            font-size: map-get($size, navbar );
+            border-bottom: .150rem solid rgb(24, 22, 22);
+            padding: .5rem;
         }
         p{
             color: $text-color;
             font-size: map-get($size, text );
+            padding: .5rem;
         }
     }
 }
