--- a/scss/layout/_main-reservas.scss
+++ b/scss/layout/_main-reservas.scss
@@ -35,6 +35,37 @@
         a{
             width: 33%;
             color: $title-color;
+            
+        -webkit-animation: scale-up-hor-left 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+        animation: scale-up-hor-left 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+        @-webkit-keyframes scale-up-hor-left {
+            0% {
+                -webkit-transform: scaleX(0.4);
+                transform: scaleX(0.4);
+                -webkit-transform-origin: 0% 0%;
+                transform-origin: 0% 0%;
+            }
+            100% {
+                -webkit-transform: scaleX(1);
+                transform: scaleX(1);
+                -webkit-transform-origin: 0% 0%;
+                transform-origin: 0% 0%;
+            }
+        }
+        @keyframes scale-up-hor-left {
+            0% {
+                -webkit-transform: scaleX(0.4);
+                transform: scaleX(0.4);
+                -webkit-transform-origin: 0% 0%;
+                transform-origin: 0% 0%;
+            }
+            100% {
+                -webkit-transform: scaleX(1);
+                transform: scaleX(1);
+                -webkit-transform-origin: 0% 0%;
+                transform-origin: 0% 0%;
+            }
+        }
             img{
                 width: 100%;
                 height: 94%;
