--- a/scss/layout/media/_query-425.scss
+++ b/scss/layout/media/_query-425.scss
@@ -205,4 +205,94 @@
             }
         }
     }
+    .faqMainSection{
+        h1{
+            font-size: 1.1rem;
+        }
+        .faqImgs{
+            gap: 0rem;
+            div{
+                img{            
+                width: 4.5rem;
+                height: 4.5rem;
+                }
+                h3{
+                    width: 7rem;
+                    height: 7rem;
+                    font-size: .45rem;
+                }
+            }
+        }
+        .questions{
+            h2{
+                font-size: .9rem;
+            }
+            p{
+                font-size: .6rem;
+            }
+        }
+    }
+    .contactMain{
+        h1{
+            font-size: 1.2rem;
+        }
+        h4{
+            font-size: .8rem;
+        }
+        .contactNumber{
+            h3{
+                font-size: .9rem;
+            }
+        }
+        .contactForm{
+            background: transparent;
+            width: 60%;
+            border: none;
+            outline: none;
+            .contactFormInput{
+                input{
+                    padding: .350rem;
+                    margin: .300rem 0;
+                }
+                textarea{
+                    height: 4rem;
+                }
+            }
+            div{
+                img{                
+                width: 7rem;
+                }
+            }
+        }
+    }
+    .mainFuturix{
+        height: 20rem;
+        .futurixTitle{
+            margin: 0%;
+            width: 27%;
+            font-size: 1rem;
+            h1{
+                padding-bottom: 3rem;
+                
+            }
+        }
+        .futurixMainImg{
+            display: none;
+        }
+    }
+    .futurixArticle{
+        padding: 1.5rem;
+        article{
+            width: 39.375rem;
+            margin-left: 1.25rem;
+            div{
+                h2{                        
+                font-size: 1.1rem;
+                }
+                p{
+                    font-size: .8rem;
+                }
+            }
+        }
+    }
 }
